--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
 
 {% block title %}File Converter by Hakez Labs {% endblock %}
 
-{% block stylesheets %}
+<!-- {% block stylesheets %}
       <link rel="stylesheet" href="{% static 'css/index.css' %}">
       <link rel="stylesheet" href="{% static 'css/results.css' %}">
-{% endblock %}
+{% endblock %} -->
 
 
 {% block content %}
