[ADD] icon from fontawesome

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,17 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}A file converter by Hakez Labs{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}"> -->
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css"
+    />
 
      <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
