--- a/templates/base.html
+++ b/templates/base.html
@@ -64,17 +64,14 @@
             </nav>
 
             <div class="flex items-center gap-4">
-                
-                <button id="theme-toggle" type="button" 
+                <button id="theme-toggle" type="button"
                     class="p-2 rounded-full text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-background-dark transition-colors">
-                    
-                    <svg id="theme-toggle-light-icon" class="hidden w-5 h-5 dark:block" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 1.414l.707.707a1 1 0 01-1.414 1.414l-.707-.707a1 1 0 011.414-1.414zm-4 15.172l.707.707a1 1 0 01-1.414 1.414l-.707-.707a1 1 0 011.414-1.414zM2 10a1 1 0 011-1h1a1 1 0 110 2H3a1 1 0 01-1-1zm15 0a1 1 0 011-1h1a1 1 0 110 2h-1a1 1 0 01-1-1zm-9.293 7.293a1 1 0 011.414 0l.707.707a1 1 0 01-1.414 1.414l-.707-.707a1 1 0 010-1.414zm1.414-12.879l.707.707a1 1 0 01-1.414 1.414l-.707-.707a1 1 0 011.414-1.414zM10 6a4 4 0 100 8 4 4 0 000-8z"></path>
-                    </svg>
-                    
-                    <svg id="theme-toggle-dark-icon" class="w-5 h-5 dark:hidden" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                    </svg>
+                
+                    <!-- Light mode icon (sun) -->
+                    <i id="theme-toggle-light-icon" class="hidden fa-solid fa-sun w-5 h-5 dark:block"></i>
+                
+                    <!-- Dark mode icon (moon) -->
+                    <i id="theme-toggle-dark-icon" class="fa-solid fa-moon w-5 h-5 dark:hidden"></i>
                 </button>
 
                 <button id="mobile-menu-button" type="button" class="p-2 rounded-full text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-background-dark md:hidden transition-colors" aria-controls="mobile-menu" aria-expanded="false">
