[ADD] error page and contact page

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
       rel="stylesheet"
     />
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+
     {% block stylesheets %}
     <!-- Additional stylesheets can be included here -->
     {% endblock %}
@@ -93,6 +96,11 @@
     <!-- Default content here -->
     {% endblock %}
 </main>
+
+{% 404 block content %}
+    <!-- Default content here -->
+{% endblock %}
+
 
 <footer>
     {% block footer %}
