[FIX] nav bar and other pages

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% 404 block content %}
+{% block content %}
 <main class="flex-grow flex items-center justify-center text-center px-4">
     <div class="max-w-md w-full">
         <div class="bg-primary/10 dark:bg-primary/20 text-primary inline-block p-4 rounded-full mb-6">
