security of files and minor UI/UX

--- a/templates/403.html
+++ b/templates/403.html
@@ -11,7 +11,10 @@
         <h1 class="text-6xl md:text-7xl font-extrabold text-slate-900 dark:text-white mb-2">403</h1>
         <h2 class="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-4">You should not be here. Shooo..!!!</h2>
         <p class="text-slate-600 dark:text-slate-400 mb-8">
-            Sorry, you are not authorized to access this page. Let's get you back on track.
+            Sorry, you are not authorized to access this page. Let's get you back on track.<br>
+            If you previously accessed your file through this link, then your session may have expired.
+            <br>Please try again from the view file or download button
+            on the conversion page. Or you can re-upload and convert your file again.
         </p>
         <a class="inline-flex items-center justify-center bg-primary text-white font-bold px-8 py-3 rounded-lg text-base hover:bg-primary/90 transition-all duration-300 shadow-lg shadow-primary/20"
             href="#">
