--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,15 @@
         <div class="flex h-16 items-center justify-between">
             
             <div class="flex items-center gap-3">
-                <img src="{% static 'images/hakezlabs.png' %}" alt="hakez labs logo" class="h-auto w-40 object-contain" />
+            
+                    <img src="{% static 'images/logo_light.png' %}" 
+                        alt="Hakez Labs Logo" 
+                        class="h-auto w-40 object-contain block dark:hidden" />
+
+                    <img src="{% static 'images/logo_dark.png' %}" 
+                        alt="Hakez Labs Logo" 
+                        class="h-auto w-40 object-contain hidden dark:block" />
+
             </div>
 
             <nav class="hidden md:flex items-center gap-8">
