--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                         Browse Files
                     </label>
 
-                    <span id="file-name-display" class="text-sm text-gray-500 dark:text-gray-400 truncate max-w-xs">No
+                    <span id="file-name-display" class="text-lg text-gray-500 dark:text-gray-400 truncate max-w-xs">No
                         file selected</span>
                     <p class="text-xs text-gray-400 dark:text-gray-500 pt-2">Max file size: 5MB</p>
                 </div>
@@ -55,10 +55,7 @@
                         class="block text-lg  font-semibold text-gray-700 dark:text-gray-300">Convert to type (PDF,
                         etc.):</label>
 
-                    {% comment %}
-                    Ensure your 'convert_to' field is styled with Tailwind classes:
-                    (e.g., via django-widget-tweaks or a custom widget)
-                    {% endcomment %}
+                    
                     {{ form.convert_to }}
                 </div>
 
