--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
                         <h3 class="font-semibold text-slate-800 dark:text-slate-200">Email</h3>
                         <p class="text-slate-600 dark:text-slate-400">Our support team is here to help.</p>
                         <a class="text-primary font-medium hover:underline"
-                            href="mailto:support@fileconverter.com">support@fileconverter.com</a>
+                            href="mailto:support@cloud.adityamaharjan.com.np">support@cloud.adityamaharjan.com.np</a>
                     </div>
                 </div>
                 <div class="flex items-start gap-4">
@@ -31,16 +31,16 @@
                         <span class="material-symbols-outlined">location_on</span>
                     </div>
                     <div>
-                        <h3 class="font-semibold text-slate-800 dark:text-slate-200">Our Office</h3>
-                        <p class="text-slate-600 dark:text-slate-400">Come say hello at our office HQ.</p>
-                        <p class="font-medium text-slate-700 dark:text-slate-300">123 Main Street, Anytown, CA
-                            91234</p>
+                        <h3 class="font-semibold text-slate-800 dark:text-slate-200">Our Headquarters</h3>
+                        <p class="text-slate-600 dark:text-slate-400">We are based in:</p>
+                        <p class="font-medium text-slate-700 dark:text-slate-300"> Lalitpur, Nepal</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="bg-white dark:bg-slate-800/50 p-8 rounded-xl shadow-lg dark:shadow-2xl">
             <form action="#" class="space-y-6" method="POST">
+                {% csrf_token %}
                 <div>
                     <label class="block text-sm font-medium text-slate-700 dark:text-slate-300" for="name">Name</label>
                     <div class="mt-1">
