--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,8 @@
                 Upload your file and select your desired output format below.
             </p>
             <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 italic">
-                Docx and docs format may not be converted as it is seen because of compatibility with the conversion
+                Note: We currently only support conversions to PDF and PNG image formats. More formats coming soon.<br>
+                DOCX and DOC formats may not be converted as it is seen because of compatibility with the conversion
                 software. For more info see about page
             </p>
         </div>
@@ -100,11 +101,11 @@
                     <p class="text-sm font-medium text-gray-800 dark:text-gray-200">Spreadsheets</p>
                 </div>
 
-                <div
+                {% comment %} <div
                     class="flex flex-col items-center justify-center p-4 bg-primary/5 dark:bg-primary/10 rounded-lg text-center">
                     <i class="fa-solid fa-file-archive text-primary text-3xl mb-2"></i>
                     <p class="text-sm font-medium text-gray-800 dark:text-gray-200">Archives</p>
-                </div>
+                </div> {% endcomment %}
 
             </div>
 
